--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Hongtao (Edgar) Hui"
 title_separator          : "-"
 name                     : &name "Hongtao (Edgar) Hui"
 description              : &description "PhD candidate at McGill University"
-url                      : https://edgarhui.github.io # 
+url                      : https://testpersonalwebsite.github.io # 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "edgarhui.github.io"
+repository               : "testpersonalwebsite.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
